<resources>
    <string name="app_name" translatable="false">AgnihotraTimeTable</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="imgContentDesc" translatable="false">Image Description</string>
    <string name="default_language" translatable="false">en</string>
    <string name="title_activity_pdfviewer" translatable="false">PDFViewerActivity</string>
    <string name="toolbar_title">Agnihotra</string>
    <string name="lblinfo">Shri Madhavji Potdar Saheb \n 1915&#8211;1974 \n Agnihotra widhi ke punarujeevankarta</string>
    <string name="lblclick">Touch anywhere to continue</string>
    <string name="lblMenu">Menu</string>
    <string name="lstAbout_agnihotra">About Agnihotra</string>
    <string name="lstProcedure">Procedure</string>
    <string name="lstMantras">Mantras</string>
    <string name="lstAbout_madhavashram">About Madhavashram</string>
    <string name="lstGallery">Gallery</string>
    <string name="lstContact_us">Contact Us</string>
    <string name="txtSearchByPlace">Search by place</string>
    <string name="txtSearchByLocation">Search by location</string>
    <string name="enterplace">Please Enter City Name</string>
    <string name="txtLatitude">Please Enter Latitude</string>
    <string name="txtLongitude">Please Enter Longitude</string>
    <string name="btnSelect">Select Date</string>
    <string name="btnGetTime"> Get Time</string>
    <string name="btnCurrentYear"> Current year</string>
    <string name="lblcopyright" translatable="false">Copyright © Madhavashram, Bhopal</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="lblDay">Day</string>
    <string name="lblAboutAgnihotra">Agnihotra is a Yagnya to be performed throughout your life, everyday regularly at sunrise and sunset. All other Yagnyas are time bound and are performed for achieving a certain purpose.  Not so with Agnihotra which is to be performed every morning and evening without a break all through your life. It becomes part of your life or rather life  becomes purposeful and meaningful because of it.</string>
    <string name="lblPollutionSubHeading">Pollution and Agnihotra</string>
    <string name="lblAboutPollution">Agnihotra is a very simple and easy method to conquer the evils of pollution. Agnihotra purifies the atmosphere. The purification of the atmosphere purifies the Prana, the life energy, and thus Prana purifies the mind. For a happy living, purified mind is a necessity. Anybody who has the will and desire to lead life successfully and in a disciplined way, can adopt this practice of Agnihotra immediately.</string>
    <string name="lblSahab">Mahanubhav Shri Madhavji Potdar Saheb</string>
    <string name="lblRulesHeading">Rules for Performing Agnihotra</string>
    <string name="lblRules1">1.  Definite Timings</string>
    <string name="lblRules2">2.  Pot to be used of a specific size and shape.</string>
    <string name="lblRules3">3.  Cow-dung cake fire</string>
    <string name="lblRules4">4.  Offerings (Oblations)</string>
    <string name="lblRequisitesHeading">Requisites for Agnihotra</string>
    <string name="lblRequisites1">1.  A receptacle (pot) in correct step-pyramid shape in prescribed dimensions made of copper or clay. This copper or clay ‘kund’ (pot) is available at Madhavashram. It can  not be had in market shops.</string>
    <string name="lblRequisites2">2.  Daily sunrise - sunset time table for the whole year applicable to the place of performance. Such a time table applicable to the place can be obtained by a request email to Madhavashram.</string>
    <string name="lblRequisites3">3.  Two drops of pure cow-ghee and few grains of whole, unbroken rice are sufficient for one time performance. 250 grams of unbroken rice grains and fifty grams of cow-ghee would be sufficient for a month’s performance (daily at sunrise and sunset). It would be easy to make this little quantity of cow-ghee at home every month if cow-smilk is available. Only cow-ghee is to be used for oblations in Agnihotra, no other kind of ghee is allowed.</string>
    <string name="lblRequisites4">4.  Dried cow-dung cakes prepared hygienically. Two small, thin, cow-dung cakes are sufficient  for the one time Agnihotra.</string>
    <string name="lblRequisites5">5.  Camphor crystals (deshi kapoor) and a matchbox for lighting the cow-dung cakes to prepare the fire for offering oblations in the copper or clay ‘kund’.</string>
    <string name="lblHowToPerformHeading">How to Perform</string>
    <string name="lblPerform1">Suppose the date today is 1st of July. Look into the time table to find out exact time of sunset. The time table tells you that the sun would set at 6 minutes past 7. So about 10 minutes before the sun-set time you should properly arrange the dry cow-dung cake pieces inside the pot leaving a little empty space in the center to place the camphor bits.</string>
    <string name="lblPerform2">Light the camphor bits with a matchstick, cow&#8211;dung pieces would burn and in about 8&#8211;9 minutes the fire in the pot would be ready for offering oblations.</string>
    <string name="lblPerform3"> A minute before the exact time of sunset, pick up a few grains of rice, smear them with two drops of cow-ghee, place them on your palm, divide  them into two equal parts.</string>
    <string name="lblPerform4">As the clock shows 6 minutes past 7, pick up one part of ghee-smeared rice grains with the fingers of your other hand, and chant the following mantra in clear, loud voice :</string>
    <string name="lblPerformMantra1">“Agnaye Swaha”</string>
    <string name="lblPerform5">Just as “swaha” is being uttered, drop the rice offering into fire in the pot (kund) with a neat smooth motion of your fingers. The offering would instantly burn emitting flame/smoke. Follow it up immediately with the chanting of second part of the mantra :</string>
    <string name="lblPerformMantra2">“Agnaye Idam Na Mama”</string>
    <string name="lblPerform6">This would complete the first mantra and the oblation. Next pick up the rest of the rice-grains placed on your palm, hold them in the fingers of your other hand, and make the second offering into the fire by chanting in the above manner the following mantra :</string>
    <string name="lblPerformMantra3">“Prajapataye Swaha”</string>
    <string name="lblPerform7">After offering , you must loudly chant.</string>
    <string name="lblPerformMantra4">“Prajapataye Idam Na Mama”</string>
    <string name="lblPerform8">This would complete the proceedings, the two offerings take around two minutes. The rice-grain burns  with a clear flame or could emit some smoke. You have to sit straight backed while performing Agnihotra, and look into the oblation flame in the fire pot as you make the offerings and chant mantras. Get up after the oblations are consumed by the fire, or you can do meditation, yoga, prayer, or your daily rituals after Agnihotra.</string>
    <string name="lblPerform9">The Sun-rise Agnihotra is performed similarly  at the exact time of sun-rise everyday. There is a little change in the first mantra chanted; the sunrise offering is made to Surya (Sun), hence the mantra at sun-rise Agnihotra is</string>
    <string name="lblPerformMantra5">“Suryaya Swaha”</string>
    <string name="lblPerform10">(Release the first offering.)</string>
    <string name="lblPerformMantra6">“Suryaya Idam Na Mama”</string>
    <string name="lblPerform11">The second mantra remains the same.</string>
    <string name="lblPerformMantra7">“Prajapataye Swaha”</string>
    <string name="lblPerform12">(Release the second offering.)</string>
    <string name="lblPerformMantra8">“Prajapataye Idam Na Mama”</string>
    <string name="lblPerform13">Everybody present at Agnihotra must join in chanting the mantra. Bathing is not a necessary condition for one to perform Agnihotra. However , it is advisable to take bath before performing the sunrise Agnihotra. Sunset Agnihotra can be performed after washing of hands and feet. The stress is on ensuring bodily cleanliness while performing Agnihotra.</string>
    <string name="lblAddressHeading">Address :</string>
    <string name="lblAddress1">Mahanubhav Shri Madhavji Sansthan (Nyas)</string>
    <string name="lblAddress2">Madhavashram</string>
    <string name="lblAddress3">Seahore Road,</string>
    <string name="lblAddress4">Bairagarh, Bhopal (M.P.)</string>
    <string name="lblWebsite">Websites :</string>
    <string name="lblSite1" translatable="false">www.agnihotraindia.in</string>
    <string name="lblSite2" translatable="false">www.madhavashramindia.in</string>
    <string name="lblContactPersonHeading">Contact Persons :</string>
    <string name="lblContactPerson1">Vijayaji Potdar</string>
    <string name="lblPhone1" translatable="false">+91&#8211;9827052445</string>
    <string name="lblContactPerson2">Dr. Vivek Potdar</string>
    <string name="lblPhone2" translatable="false">+91&#8211;8120036303</string>
    <string name="lblEmail2" translatable="false">madhavashram@agnihotraindia.in</string>
    <string name="lblContactPerson3">Mr. Prasad Kushwaha</string>
    <string name="lblPhone3" translatable="false">+91&#8211;9826079446</string>
    <string name="lblEmail3" translatable="false">prasad@agnihotraindia.in</string>
    <string name="lblContactPerson4">Mr. Swapnil Tolambiya</string>
    <string name="lblPhone4" translatable="false">+91&#8211;9881724541</string>
    <string name="lblEmail4" translatable="false">swapniltolambiya@gmail.com</string>
    <string name="lblContactPerson5">Mr. Kanishk Bansode</string>
    <string name="lblPhone5" translatable="false">+91&#8211;9890553680</string>
    <string name="lblEmail5" translatable="false">kanishk.bansode@yahoo.com</string>
</resources>