<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.madhavashram.agnihotratimetable.views.menu.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="end"
                android:text="@string/lblAddressHeading"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/lblAddress1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white_light"
                    android:text="@string/lblAddress2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblAddress3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblAddress4"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/lblWebsite"
                android:textColor="@color/white"
                android:gravity="end"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblSite1"
                    android:autoLink="web"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblSite2"
                    android:autoLink="web"
                    android:layout_marginTop="@dimen/dp_5"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/lblContactPersonHeading"
                android:textColor="@color/white"
                android:gravity="end"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <!-- Contact Person 1 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/lblContactPerson1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblPhone1"
                    android:autoLink="phone"
                    android:layout_marginTop="@dimen/dp_5"/>

                <!-- Contact Person 2 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/lblContactPerson2"
                    android:layout_marginTop="@dimen/dp_15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblPhone2"
                    android:autoLink="phone"
                    android:layout_marginTop="@dimen/dp_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblEmail2"
                    android:autoLink="email"
                    android:layout_marginTop="@dimen/dp_5"/>

                <!-- Contact Person 3 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/lblContactPerson3"
                    android:layout_marginTop="@dimen/dp_15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblPhone3"
                    android:autoLink="phone"
                    android:layout_marginTop="@dimen/dp_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblEmail3"
                    android:autoLink="email"
                    android:layout_marginTop="@dimen/dp_5"/>

                <!-- Contact Person 4 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/lblContactPerson4"
                    android:layout_marginTop="@dimen/dp_15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblPhone4"
                    android:autoLink="phone"
                    android:layout_marginTop="@dimen/dp_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblEmail4"
                    android:autoLink="email"
                    android:layout_marginTop="@dimen/dp_5"/>

                <!-- Contact Person 5 -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/lblContactPerson5"
                    android:layout_marginTop="@dimen/dp_15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblPhone5"
                    android:autoLink="phone"
                    android:layout_marginTop="@dimen/dp_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lblEmail5"
                    android:autoLink="email"
                    android:layout_marginTop="@dimen/dp_5"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
